# tauri-plugin-mcp-client

./: .gitignore  CLAUDE.md  Cargo.toml  MIGRATION_GUIDE.md  README.md  TESTING.md  TROUBLESHOOTING.md  tarpaulin-report.html
.claude/: settings.local.json
examples/basic-integration/: README.md  echo-server.js
examples/game-integration/: README.md
guest-js/: index.ts  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts  vitest.config.ts
guest-js/tests/: types.test.ts
permissions/: default.toml
src/: commands.rs  error.rs  lib.rs  process.rs  registry.rs
tests/: error_unit_tests.rs  integration_tests.rs  lib.rs  mock_mcp_server.rs  unit_tests.rs
