[package]
name = "tauri-plugin-mcp-client"
version = "0.1.0"
description = "Tauri plugin for Model Context Protocol (MCP) client support"
authors = ["Scott Werner <scott@sublayer.com>"]
license = "MIT"
edition = "2021"

[lib]
name = "tauri_plugin_mcp_client"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["process", "sync", "time"] }
once_cell = "1.19"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[features]
default = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]
